<resources>
    <string name="app_name">myIVLE</string>
    <string name="app_name_with_active_account">myIVLE (%1$s)</string>
    <string name="sign_in">Sign In</string>
    <string name="nusnet_id">NUSNET ID</string>
    <string name="password">Password</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="signing_in">Signing in&#8230;</string>
    <string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="about_app_name">About %1$s</string>
	<string name="help">Help</string>
	<string name="loading">Loading&#8230;</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="share_via">Share via</string>
    <string name="details">Details</string>
    <string name="ivle_news">IVLE News</string>
    <string name="searchable_hint">Search IVLE&#8230;</string>
    <string name="main_activity_modules">Modules</string>
    <string name="main_activity_my_agenda">My Agenda</string>
    <string name="main_activity_waiting_for_sync">Waiting for sync&#8230;</string>
    <string name="main_activity_modules_will_appear">Your modules will appear here shortly.</string>
    <string name="public_news_fragment_no_news">There are no public news.</string>
    <string name="about_application_text">
        <![CDATA[
        <p>
	        <big>Version %1$s</big><br />
	        \u00A9 2012 Team CM.
        </p>
        <p>
        This application is <a href="https://github.com/yjwong/com.nuscomputing.ivle">open source</a>, and
        uses open source components such as <a href="https://github.com/yjwong/com.nuscomputing.ivlelapi">
        IVLE LAPI for Java</a>, <a href="http://wiki.fasterxml.com/JacksonHome">Jackson JSON Processor</a>,
        <a href="http://joda-time.sourceforge.net/">Joda-Time</a>, <a href="http://code.google.com/p/acra/">ACRA</a>,
        and <a href="https://github.com/koush/UrlImageViewHelper">UrlImageViewHelper</a>.
        </p>
        <p>
        Please submit bug reports to <a href="mailto:yjwong92@gmail.com">yjwong92@gmail.com</a>.
        </p> 
        ]]>
    </string>
    <string name="authenticator_activity_credentials_stored_securely">Your credentials will be stored securely.</string>
    <string name="authenticator_activity_sign_in_to_ivle">Sign in to IVLE</string>
    <string name="authenticator_activity_nusnet_id_or_password_invalid">NUSNET ID or password is invalid. Please try again.</string>
    <string name="authenticator_activity_password_invalid">Password is invalid. Please try again.</string>
    <string name="authenticator_activity_problem_communicating_with_server">There was a problem communicating with the server. Please try again later.</string>
    <string name="authenticator_activity_enter_nusnet_id">Please enter an NUSNET ID.</string>
    <string name="authenticator_activity_enter_password">Please enter a password.</string>
    <string name="authenticator_activity_account_successfully_added">Account has been successfully added.</string>
    <string name="module_activity_info">Info</string>
    <string name="module_activity_announcements">Announcements</string>
    <string name="module_activity_lecturers">Lecturers</string>
    <string name="module_activity_webcasts">Webcasts</string>
    <string name="module_activity_workbins">Workbins</string>
    <string name="module_activity_weblinks">Weblinks</string>
    <string name="module_announcements_fragment_no_announcements">There are no announcements.</string>
    <string name="module_info_fragment_unable_to_load">Unable to load module information.\nPlease check your network connection.</string>
    <string name="module_info_fragment_unable_to_load_additional">Unable to load additional module information.\nPlease check your network connection.</string>
    <string name="module_info_fragment_failed_to_load">Failed to load.</string>
    <string name="module_info_fragment_no_additional_info">No additional info available.</string>
    <string name="module_info_fragment_more_info">More Info</string>
    <string name="module_lecturers_fragment_email">Email</string>
    <string name="module_lecturers_fragment_email_via">Email via</string>
    <string name="module_lecturers_fragment_lecturer_photo">Lecturer Photo</string>
    <string name="module_lecturers_fragment_unable_to_load">Unable to load lecturer information.\nPlease check your network connection.</string>
    <string name="module_lecturers_fragment_no_lecturers">There are no lecturers.</string>
    <string name="module_webcasts_fragment_no_webcasts">There are no webcasts.</string>
    <string name="module_weblinks_fragment_no_weblinks">There are no weblinks.</string>
    <string name="module_workbins_fragment_no_workbins">There are no workbins.</string>
    <string name="modules_fragment_no_modules">There are no modules.</string>
    <string name="searchable_activity_results_for">Results for \"%1$s\"</string>
    <string name="searchable_fragment_no_search_results">No search results found.</string>
    <string name="searchable_fragment_heading_title_modules">Modules</string>
    <string name="searchable_fragment_heading_title_modules_online">Modules (Online)</string>
    <string name="settings_fragment_account_management">Account Management</string>
    <string name="settings_fragment_no_accounts_configured">No accounts have been configured.</string>
    <string name="settings_fragment_app_will_restart">This application will restart to reflect the account change.</string>
    <string name="settings_fragment_add_account_summary">Tap to add an account</string>
    <string name="settings_fragment_add_account_title">Add account&#8230;</string>
    <string name="settings_fragment_manage_accounts_summary">Tap to manage accounts</string>
    <string name="settings_fragment_manage_accounts_title">Manage accounts&#8230;</string>
    <string name="settings_fragment_webcast_downloads">Webcast Downloads</string>
    <string name="settings_fragment_download_over_mobile_networks_title">Download over mobile networks</string>
    <string name="settings_fragment_download_over_mobile_networks_summary">Allow use of 3G/4G for downloads</string>
    <string name="settings_fragment_about">About</string>
    <string name="settings_fragment_about_summary">\u00A9 2012 Team CM</string>
    <string name="settings_fragment_about_title">Version %1$s</string>
    <string name="settings_fragment_send_feedback_title">Send Feedback</string>
    <string name="settings_fragment_send_feedback_subject">Feedback for %1$s (Version %2$s)</string>
    <string name="settings_fragment_send_feedback_via">Send Feedback via</string>
    <string name="settings_fragment_check_for_updates">Check for Updates</string>
    <string name="settings_fragment_checking_for_updates">Checking for updates&#8230;</string>
    <string name="settings_fragment_update_check_failed">Failed to check for updates.</string>
    <string name="settings_fragment_update_latest_version">Already at latest version.</string>
    <string name="settings_fragment_update_available">Update available</string>
    <string name="settings_fragment_update_available_body">An update is available. Do you want to download now?</string>
    <string name="settings_fragment_update_download_via">Download via</string>
    <string name="view_webcast_file_activity_loading_video">Loading Video&#8230;</string>
    <string name="view_webcast_file_activity_webcast_queued_wifi">
        Webcast has been queued for download. Your download will start as soon you are connected to a WiFi network.
    </string>
    <string name="view_webcast_file_activity_webcast_queued">
        Webcast has been queued for download. Check the notification area for progress.
    </string>
    <string name="view_webcast_fragment_no_webcast_item_groups">There are no webcast groups.</string>
    <string name="view_webcast_item_group_fragment_no_files">There are no files.</string>
    <string name="view_workbin_contents_fragment_no_contents">There are no files or folders in this workbin.</string>
    <string name="view_workbin_files_fragment_no_files">There are no files.</string>
    <string name="view_workbin_folders_fragment_no_folders">There are no folders.</string>
    <string name="view_workbin_folders_fragment_file_count">%1$s file(s)</string>
    <string name="view_workbin_fragment_no_workbin_folders">There are no folders.</string>
    <string name="workbin_file_download_dialog_fragment_progress">%1$s of %2$s (%3$d%%)</string>
    <string name="workbin_file_download_dialog_fragment_unable_to_download">Unable to download file. \nPlease check your network connection.</string>
	<string name="workbin_file_download_dialog_fragment_no_app_found">No application can be found to open this file.</string>
	<string name="account_settings_fragment_sync_settings">Sync Settings</string>
	<string name="account_settings_fragment_sync_interval">Sync Interval</string>
	<string name="account_settings_fragment_notifications">Notifications</string>
	<string name="account_settings_fragment_notifications_on">Notifications are on</string>
	<string name="account_settings_fragment_notifications_off">Notifications are off</string>
	<string name="account_settings_fragment_announcements">Announcements</string>
	<string name="account_settings_fragment_announcements_summary">Notify me about new announcements</string>
	<string name="account_settings_activity_account_settings">Account Settings</string>
	<string name="notification_new_announcements">%1$d new announcements</string>
	<string name="notification_plus_more">+%1$d more</string>
	<string name="temp_help_not_available_yet">Sorry, help is not available yet.</string>
	<string name="crash_toast_text">Unfortunately, myIVLE has stopped.</string>
	<string name="crash_notif_ticker_text">Unfortunately, myIVLE has stopped.</string>
	<string name="crash_notif_title">myIVLE has crashed&#8230;</string>
	<string name="crash_notif_text">Please tap here to send a report.</string>
	<string name="crash_dialog_title">myIVLE has crashed</string>
	<string name="crash_dialog_text">An unexpected error occurred forcing the
	    application to stop. Please help us fix this by sending us error data,
	    all you have to do is tap \'OK\'.</string>
	<string name="crash_dialog_comment_prompt">You can add your comments about the problem below:</string>
	<string name="crash_dialog_ok_toast">Thank you!</string>
</resources>