<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="ps_root" >
    
    <PreferenceCategory android:title="@string/settings_fragment_account_management">
    
        <ListPreference
            android:key="account"
            android:title="@string/nusnet_id"
        />
        
        <Preference
            android:key="add_account"
            android:summary="@string/settings_fragment_add_account_summary"
            android:title="@string/settings_fragment_add_account_title"
        />
        
        <Preference
            android:key="manage_accounts"
            android:summary="@string/settings_fragment_manage_accounts_summary"
            android:title="@string/settings_fragment_manage_accounts_title"
        />
        
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_fragment_webcast_downloads">
        
        <CheckBoxPreference
            android:key="download_over_mobile_networks"
            android:title="@string/settings_fragment_download_over_mobile_networks_title"
            android:summary="@string/settings_fragment_download_over_mobile_networks_summary"
            android:defaultValue="true"
        />
                
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/settings_fragment_about">
        
        <Preference
            android:key="about"
            android:title="@string/settings_fragment_about_title"
        />
        
        <Preference
            android:key="check_updates"
            android:title="@string/settings_fragment_check_for_updates"
        />
        
        <Preference
            android:key="send_feedback"
            android:title="@string/settings_fragment_send_feedback_title"
        />
        
    </PreferenceCategory>

</PreferenceScreen>