<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="account_settings_root" >
    
    <PreferenceCategory android:title="@string/account_settings_fragment_sync_settings">
    
	    <ListPreference
	        android:key="sync_interval"
	        android:title="@string/account_settings_fragment_sync_interval"
	        android:defaultValue="@integer/default_sync_interval"
	        android:entries="@array/account_settings_sync_interval_list"
	        android:entryValues="@array/account_settings_sync_interval_values"
	    />
    
    </PreferenceCategory>
    
    <PreferenceCategory android:title="@string/account_settings_fragment_notifications">
        
        <CheckBoxPreference
            android:key="notifications"
            android:title="@string/account_settings_fragment_notifications"
            android:summaryOff="@string/account_settings_fragment_notifications_off"
            android:summaryOn="@string/account_settings_fragment_notifications_on"
            android:defaultValue="true"
        />
        
        <CheckBoxPreference
            android:key="notifications_announcements"
            android:title="@string/account_settings_fragment_announcements"
            android:summary="@string/account_settings_fragment_announcements_summary"
            android:defaultValue="true"
            android:dependency="notifications"
        />
        
    </PreferenceCategory>
    
</PreferenceScreen>