<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <RelativeLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@android:drawable/title_bar_tall">
        
        <ImageView
            android:id="@+id/title_bar_icon"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="12dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_name"
            />
        
	    <TextView
	        android:id="@+id/label_sign_in"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/title_bar_icon"
	        android:layout_centerVertical="true"
	        android:text="@string/authenticator_activity_sign_in_to_ivle"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:textStyle="bold"
	        
	        android:singleLine="true"
	        android:shadowColor="#BB000000"
	        android:shadowRadius="2.75"
	        />
        
    </RelativeLayout>
            
    <ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginBottom="54dp"
	    android:fillViewport="true" >
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="16dp" >
		    
		    <EditText
		        android:id="@+id/username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="text|textNoSuggestions|textCapCharacters"
		        android:hint="@string/nusnet_id"
		        android:layout_marginBottom="8dp">
		
		        <requestFocus />
		    </EditText>
		
		    <EditText
		        android:id="@+id/password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:inputType="textPassword"
		        android:hint="@string/password"
		        android:layout_marginBottom="8dp" />
		
		    <TextView
		        android:id="@+id/fine_print"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/authenticator_activity_credentials_stored_securely"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:layout_marginBottom="8dp" />
		</LinearLayout>
		
	</ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginTop="-54dp"
        android:background="@android:drawable/bottom_bar"
        android:gravity="center_vertical" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:onClick="handleCancel" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/sign_in"
            android:onClick="handleSignIn" />
    </LinearLayout>

</LinearLayout>